// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu should not render icon 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Icon"
        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
        data-test-subj="ButtonIcon"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="boxesHorizontal"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render button icon disabled 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Icon"
        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
        data-test-subj="ButtonIcon"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="boxesHorizontal"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render button icon with default settings 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Icon"
        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
        data-test-subj="ButtonIcon"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="boxesHorizontal"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render custom Actions 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Empty"
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
        data-test-subj="EmptyButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="boxesHorizontal"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render empty button icon with actions and open the popover when clicked 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Empty"
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
        data-test-subj="EmptyButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          />
          <span
            color="inherit"
            data-euiicon-type="cheer"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render empty button icon with actions and should not open the popover when clicked if disableActions 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Empty"
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
        data-test-subj="EmptyButton"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          />
          <span
            color="inherit"
            data-euiicon-type="cheer"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderMenu should render empty button icon with different icon settings 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="Items"
    >
      <button
        aria-label="Header menu Button Empty"
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
        data-test-subj="EmptyButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          />
          <span
            color="inherit"
            data-euiicon-type="cheer"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
